<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/layButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="0dp" >

        <Button
            android:id="@+id/btnMap"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:text="@string/btn_open_map" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/btn_settings" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/layButtons"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/img_logo_desc"
        android:src="@drawable/front_pic" />

    <Button
        android:id="@+id/btn_stanje_xica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/btn_stanjeXica" />

</RelativeLayout>