<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/poi_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/title_list_item"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/poi_adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/poi_title"
        android:layout_marginLeft="20dp"
        android:text="@string/adress_list_item" />

    <TextView
        android:id="@+id/poi_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/poi_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:text="@string/udaljenostdo_list_item"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15sp" />

</RelativeLayout>
