<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_color" >
        
        <TextView
            android:id="@+id/poi_title_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/title_list_item"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />
	
	    <TextView
	        android:id="@+id/poi_adress_header"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@id/poi_title_header"
	        android:layout_marginLeft="20dp"
	        android:text="@string/adress_list_item"
	        android:textStyle="bold" />
	
	    <TextView
	        android:id="@+id/poi_distance_header"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@id/poi_title_header"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginRight="10dp"
	        android:text="@string/udaljenostdo_list_item"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="15sp"
	        android:textStyle="bold" />
        
    </RelativeLayout>
    
    <ListView
        android:id="@+id/listMenze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header" >

    </ListView>

</RelativeLayout>
